FGT-VM-Transit/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "location - same as above"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Username for the FortiGate virtual appliance."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Password for the FortiGate virtual appliance."
      }
    },
    "FortiGateName": {
      "type": "string",
      "metadata": {
        "description": "Name for FortiGate virtual appliance."
      }
    },
    "FortiGateImageSKU": {
      "type": "string",
      "defaultValue": "fortinet_fg-vm_payg",
      "allowedValues": [
        "fortinet_fg-vm",
        "fortinet_fg-vm_payg"
      ],
      "metadata": {
        "description": "Identifies whether to to use PAYG (on demand licensing) or BYOL license model (where license is purchased separately)"
      }
    },
     "fortigateImageVersion": {
      "type": "string",
      "defaultValue": "6.4.3",
      "allowedValues": [
        "6.2.0",
        "6.2.2",
        "6.2.3",
        "6.2.4",
        "6.2.5",
        "6.4.0",
        "6.4.1",
        "6.4.2",
        "6.4.3",
        "latest"
      ],
      "metadata": {
        "description": "Only 6.0.0 has the A/P HA feature currently"
      }
    },
    "instanceType": {
      "type": "string",
      "defaultValue": "Standard_D2_v2",
      "metadata": {
        "description": "Virtual Machine size selection"
      }
    },
    "publicIPNewOrExistingOrNone": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing",
        "none"
      ],
      "metadata": {
        "description": "Identify whether to use a public IP and if so whether it is new or previously created"
      }
    },
    "publicIPAddressNameFGT": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Name of Public IP address resource."
      }
    },

    "publicIPResourceGroup": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Resource Group containing the public IP - or new resource group from above (if new public IP)"
      }
    },
    "publicIPAddressType": {
      "type": "string",
      "defaultValue": "Static",
      "allowedValues": [
        "Dynamic",
        "Static"
      ],
      "metadata": {
        "description": "Type of public IP address - A 'dynamic' address will change during reboot or periods of inactivity"
      }
    },
    "vnetNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ],
      "metadata": {
        "description": "Identify whether to use a new or existing vnet"
      }
    },
    "vnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of the Azure virtual network."
      }
    },
    "vnetResourceGroup": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Resource Group containing the virtual network - or new resource group from above (if new vnet)"
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Virtual network address space in CIDR notation, example: 10.2.0.0/16"
      }
    },
    "PublicSubName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Subnet 1 Name"
      }
    },
    "PublicSubPrefix": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Subnet 1 Prefix in CIDR notation (if using public IP, this will be the 'WAN' or external port), example: 10.2.1.0/24"
      }
    },
    "fortiGateIP1": {
      "type": "string",
      "metadata": {
        "description": "Static IP from subnet 1 for port1 of the FortiGate virtual appliance.  Remember Azure reserves the first 3 IPs in each subnet.  When using an exising vnet, verify that this address is not already assigned, example: 10.2.1.4"
      }
    },
    "TransitSubName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Subnet 2 Name"
      }
    },
    "TransitSubPrefix": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Subnet 2 Prefix in CIDR notation (if using public IP, this will be the 'WAN' or external port), example: 10.2.2.0/24"
      }
    },
    "fortiGateIP2": {
      "type": "string",
      "metadata": {
        "description": "Static IP from subnet 2 for port1 of the FortiGate virtual appliance.  Remember Azure reserves the first 3 IPs in each subnet.  When using an exising vnet, verify that this address is not already assigned, example: 10.2.2.4"
      }
    },
    "FortinetTags": {
    "type": "object",
    "defaultValue": {
      "provider": "6EB3B02F-50E5-4A3E-8CB8-2E129258317D"
      }
    },
    "artifactsBaseUrl": {
      "type": "string",
      "defaultValue": "https://raw.githubusercontent.com/fortinetclouddev/FortigateAzureTemplate/5.3.7",
      "metadata": {
        "description": "Base URL of the solution template gallery package",
        "artifactsBaseUrl": ""
      }
    }

  },
  "variables": {
    "vmStorageAccountContainerName": "vhds",
    "vmSize": "[parameters('instanceType')]",

    "VNetName": "[parameters('vnetName')]",
    "PublicSubName": "[parameters('PublicSubName')]",
    "TransitSubName": "[parameters('TransitSubName')]",
    "vnetID": "[resourceId(parameters('vnetResourceGroup'),'Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
    "PublicSubRef": "[concat(variables('vnetID'),'/subnets/', variables('PublicSubName'))]",
    "TransitSubRef": "[concat(variables('vnetID'),'/subnets/', variables('TransitSubName'))]",

    "VNetAddressPrefix": "[parameters('vnetAddressPrefix')]",
    "PublicSubPrefix": "[parameters('PublicSubPrefix')]",
    "TransitSubPrefix": "[parameters('TransitSubPrefix')]",

    "routeTable1Name": "[concat(parameters('FortiGateName'), '-', parameters('PublicSubName'),'-routes')]",
    "routeTable2Name": "[concat(parameters('FortiGateName'), '-', parameters('TransitSubName'),'-routes')]",

    "FGDMZAddress": "[parameters('fortiGateIP2')]",
    "FGPubFacingAddress": "[parameters('fortiGateIP1')]",
    "apiVer": "2015-06-15",
    "compute_VM_fg1_Name": "[parameters('FortiGateName')]",

    "network_NIC_fg11_Name": "[concat(parameters('FortiGateName'),'Nic0')]",
    "network_NIC_fg11_Id": "[resourceId('Microsoft.Network/networkInterfaces',variables('network_NIC_fg11_Name'))]",
    "network_NIC_fg12_Name": "[concat(parameters('FortiGateName'),'Nic1')]",
    "network_NIC_fg12_Id": "[resourceId('Microsoft.Network/networkInterfaces',variables('network_NIC_fg12_Name'))]",

    "publicIPSetupURL": "[concat(parameters('artifactsBaseUrl'),'/','publicip-',parameters('publicIPNewOrExistingOrNone'),'.json')]",
    "virtualNetworkSetupURL": "[concat(parameters('artifactsBaseUrl'),'/','vnet-',parameters('vnetNewOrExisting'),'.json')]",

    "compute_AvailabilitySet_FG_Name": "[concat(parameters('FortiGateName'),'AvailSet')]",
    "compute_AvailabilitySet_FG_Id": "[resourceId('Microsoft.Compute/availabilitySets', variables('compute_AvailabilitySet_FG_Name'))]",

        "NSGName": "[concat(parameters('FortigateName'),'-NSG')]"
  },
  "resources": [
    {
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('compute_AvailabilitySet_FG_Name')]",
      "apiVersion": "2017-03-30",
      "tags": {
       "provider": "[toUpper(parameters('FortinetTags').provider)]"
      },
      "location": "[parameters('location')]",
      "properties": {
        "platformFaultDomainCount": "2",
        "platformUpdateDomainCount": "2"
      },
      "sku": {
        "name":  "Aligned"
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('routeTable1Name')]",
      "apiVersion": "[variables('apiVer')]",
      "tags": {
       "provider": "[toUpper(parameters('FortinetTags').provider)]"
      },
      "location": "[parameters('location')]",
      "properties": {
        "routes": [
          {
            "name": "[concat('to', '-', parameters('TransitSubName'))]",
            "properties": {
              "addressPrefix": "[variables('TransitSubPrefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[variables('FGPubFacingAddress')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('routeTable2Name')]",
      "tags": {
       "provider": "[toUpper(parameters('FortinetTags').provider)]"
      },
      "apiVersion": "[variables('apiVer')]",
      "location": "[parameters('location')]",
      "properties": {
        "routes": [
          {
            "name": "[concat('to', '-', parameters('PublicSubName'))]",
            "properties": {
              "addressPrefix": "[variables('PublicSubPrefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[variables('FGDMZAddress')]"
            }
          },
          {
            "name": "to-Internet",
            "properties": {
              "AddressPrefix": "0.0.0.0/0",
              "nextHopType": "VirtualAppliance",
              "nextHopIPAddress": "[variables('FGDMZAddress')]"
            }
          }
        ]
      }
    },
    {
      "name": "SettingUpVirtualNetwork",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2015-01-01",
      "dependsOn": [
        "[concat('Microsoft.Network/routeTables/', variables('routeTable1Name'))]",
        "[concat('Microsoft.Network/routeTables/', variables('routeTable2Name'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('virtualNetworkSetupURL')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "vnetName": {
            "value": "[parameters('vnetName')]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "vnetAddressPrefix": {
            "value": "[parameters('vnetAddressPrefix')]"
          },
          "OutsideSubnetName": {
            "value": "[parameters('PublicSubName')]"
          },
          "subnet1AddressPrefix": {
            "value": "[parameters('PublicSubPrefix')]"
          },
          "DMZSubnetName": {
            "value": "[parameters('TransitSubName')]"
          },
          "subnet2AddressPrefix": {
            "value": "[parameters('TransitSubPrefix')]"
          },
          "vnetResourceGroup": {
            "value": "[parameters('vnetResourceGroup')]"
          },
          "routeTable1Name": {
            "value": "[variables('routeTable1Name')]"
          },
          "routeTable2Name": {
            "value": "[variables('routeTable2Name')]"
          },
          "FortinetTags": {
            "value": "[parameters('FortinetTags')]"
          }
        }
      }
    },
    {
      "apiVersion": "2015-01-01",
      "type": "Microsoft.Resources/deployments",
      "name": "SettingUpPublicIPandFollowing",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/', 'SettingUpVirtualNetwork')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('publicIPSetupURL')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "publicIPAddressName": {
            "value": "[parameters('publicIPAddressNameFGT')]"
          },
          "publicIPAddressType": {
            "value": "[parameters('publicIPAddressType')]"
          },
          "publicIPAddressResourceGroup": {
            "value": "[parameters('publicIPResourceGroup')]"
          },
          "VMName": {
            "value": "[parameters('FortiGateName')]"
          },
          "VNetName": {
            "value": "[parameters('vnetName')]"
          },
          "FGPubFacingAddress": {
            "value": "[variables('FGPubFacingAddress')]"
          },
          "subnet1Ref": {
            "value": "[variables('PublicSubRef')]"
          },
          "network_NIC_fg11_Name": {
            "value": "[variables('network_NIC_fg11_Name')]"
          },
          "FortinetTags": {
            "value": "[parameters('FortinetTags')]"
          }
        }
      }
    },
    {
      "apiVersion": "[variables('apiVer')]",
      "tags": {
       "provider": "[toUpper(parameters('FortinetTags').provider)]"
      },
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('network_NIC_fg12_Name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/', 'SettingUpVirtualNetwork')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('FGDMZAddress')]",
              "subnet": {
                "id": "[variables('TransitSubRef')]"
              }
            }
          }
        ],
        "enableIPForwarding": true
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('compute_VM_fg1_Name')]",
      "apiVersion": "2017-03-30",
      "tags": {
       "provider": "[toUpper(parameters('FortinetTags').provider)]"
      },
      "location": "[parameters('location')]",
      "identity": {
        "type": "SystemAssigned"
      },
      "plan": {
        "name": "[parameters('FortiGateImageSKU')]",
        "publisher": "fortinet",
        "product": "fortinet_fortigate-vm_v5"
      },
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/', 'SettingUpPublicIPandFollowing')]",
        "[concat('Microsoft.Network/networkInterfaces/',variables('network_NIC_fg12_Name'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "availabilitySet": {
          "id": "[variables('compute_AvailabilitySet_FG_Id')]"
        },
        "osProfile": {
          "computerName": "[variables('compute_VM_fg1_Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "customData": "[base64(concat('config system sdn-connector\nedit AzureSDN\nset type azure\nend\nend\nconfig system interface\n edit port2\n set mode dhcp\n set defaultgw disable \n end\n config router static\n edit 1\n set dst 10.40.0.0 255.255.0.0\n set gateway 172.27.40.65\n set device \"port2\"\n next\n end \n config firewall policy\n edit 1\n    set name \"Allow any any\"\n    set srcintf \"any\"\n    set dstintf \"any\"\n    set srcaddr \"all\"\n    set dstaddr \"all\"\n    set ac [...]
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "fortinet",
            "offer": "fortinet_fortigate-vm_v5",
            "sku": "[parameters('FortiGateImageSKU')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage"
          },
          "dataDisks": [
            {
              "diskSizeGB": "30",
              "lun": 0,
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[variables('network_NIC_fg11_Id')]"
            },
            {
              "properties": {
                "primary": false
              },
              "id": "[variables('network_NIC_fg12_Id')]"
            }
          ]
        }
      }
    },

        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-09-01",
            "name": "[variables('NSGName')]",
            "location": "[parameters('location')]",
            "tags": {
                "provider": "[toUpper(parameters('FortinetTags').provider)]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowSSHInbound",
                        "properties": {
                            "description": "Allow SSH In",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowHTTPInbound",
                        "properties": {
                            "description": "Allow 80 In",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowHTTPSInbound",
                        "properties": {
                            "description": "Allow 443 In",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowDevRegInbound",
                        "properties": {
                            "description": "Allow 514 in for device registration",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "514",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowAllOutbound",
                        "properties": {
                            "description": "AllowOut",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        }
  ]
  }
